$Id: ChangeLog,v 1.33 2003/05/24 15:21:54 uehira Exp $

2003-05-25 Uehira Kenji  <uehira@sevo.kyushu-u.ac.jp>
	* hypomhc.c : TRAVEL-TIME CALCULATION MODE
	* Version 1.1.17 released.

2003-05-20 Urabe Taku  <urabe@eri.u-tokyo.ac.jp>
	* win.c : allow origin time at out of file in AUTPK mode
	          set S range after the P time already picked in AUTPK mode
	* update_ch : created.
	* Version 1.1.16 released.

2003-05-14 Urabe Taku  <urabe@eri.u-tokyo.ac.jp>
	* shmdump.c : fflush(fpout) inserted for rawdump

2003-05-12 Urabe Taku  <urabe@eri.u-tokyo.ac.jp>
	* win.c : 2003.5.2 version, added options -e and -i
            -e [exclusively_use_ch_file], eg. '-e ch.tbl'
            -i [exclusively_use_ch_(initial)letter(s)], eg. '-i 0b' to use only 0BXX

2003-05-11 Urabe Taku  <urabe@eri.u-tokyo.ac.jp>
	* ecore.c : Fixed version by N.Nakakawaji
	* ecore2.c : Fixed version by N.Nakakawaji (and added to CVS)
	
2003-04-29 Uehira Kenji  <uehira@sevo.kyushu-u.ac.jp>
	* if cygwin environment, check libcygipc.a
	* add one tip in win_hack.txt
	* delete shmx2 in AUTHORS
	* Version 1.1.15 released.

2003-04-25 Uehira Kenji  <uehira@sevo.kyushu-u.ac.jp>
	* Version 1.1.14 released.
	* WIN_pkg now supports Cygwin environment.
	
2003-04-16 Urabe Taku  <urabe@eri.u-tokyo.ac.jp>
        * shmdump.c : bug fix (last sec not outputted in stdin mode)

2003-04-8 Urabe Taku  <urabe@eri.u-tokyo.ac.jp>
        * send_raw.c : added option -1 for 1 packet/sec mode
	* Version 1.1.13 released.

2003-04-4 Urabe Taku  <urabe@eri.u-tokyo.ac.jp>
	* recvts.c : avoid overwrite ch_table[] by memcpy(rbuf)
	* shmdump.c : rawdump (-r) mode
	* win.c : patch by S.Nakagawa not to die at SAVE without hypo
	* relay.c : bug fixed in optind, psize for stdin
	* recvt.c : added -N (no pno) and -A (no TS) options

2003-02-27 Urabe Taku  <urabe@eri.u-tokyo.ac.jp>
	* mkCDimage : suite for FreeBSD4.7 and Redhat7.2
	* manuals recvt.1,relay.1,send_raw.1 : updated.
	* recvt.c : disable resend request if -r option.
