@@ -1,7 +1,8 @@
-$Id: ChangeLog,v 1.33 2003/05/24 15:21:54 uehira Exp $
+$Id: ChangeLog,v 1.34 2003/05/25 12:40:01 uehira Exp $
 
 2003-05-25 Uehira Kenji  <uehira@sevo.kyushu-u.ac.jp>
 	* hypomhc.c : TRAVEL-TIME CALCULATION MODE
+	            : bug fix
 	* Version 1.1.17 released.
 
 2003-05-20 Urabe Taku  <urabe@eri.u-tokyo.ac.jp>
